@@ -1,47 +1,248 @@
-import java.util.List;
-import java.util.Optional;
+import com.google.common.collect.ImmutableList;
+import com.mojang.datafixers.util.Pair;
 
-public interface pp {
-   static void a(pe<dzm> $$0) {
-      ii<dzg> $$1 = $$0.a(ke.aD);
-      ii<cuo> $$2 = $$0.a(ke.at);
-      ih.c<dzm> $$3 = $$0.a(
-         dyz.a,
-         new dzm(
-            List.of(dzm.a($$1.b(dza.t)), dzm.a($$1.b(dza.u)), dzm.a($$1.b(dza.v)), dzm.a($$1.b(dza.w)), dzm.a($$1.b(dza.x))), new eab(34, 8, eac.a, 10387312)
-         )
-      );
-      $$0.a(dyz.b, new dzm($$1.b(dza.f), new eab(32, 8, eac.a, 14357617)));
-      $$0.a(dyz.c, new dzm($$1.b(dza.g), new eab(32, 8, eac.a, 14357618)));
-      $$0.a(dyz.d, new dzm($$1.b(dza.e), new eab(32, 8, eac.a, 14357619)));
-      $$0.a(dyz.e, new dzm($$1.b(dza.j), new eab(32, 8, eac.a, 14357620)));
-      $$0.a(dyz.f, new dzm($$1.b(dza.a), new eab(jb.g, ead.c.b, 0.2F, 165745296, Optional.of(new ead.a($$3, 10)), 32, 8, eac.a)));
-      $$0.a(dyz.q, new dzm($$1.b(dza.F), new eab(24, 8, eac.a, 20083232)));
-      $$0.a(dyz.g, new dzm($$1.b(dza.l), new eab(32, 5, eac.b, 10387313)));
-      $$0.a(dyz.h, new dzm($$1.b(dza.d), new eab(80, 20, eac.b, 10387319)));
-      $$0.a(dyz.i, new dzm($$1.b(dza.r), new eab(new jb(9, 0, 9), ead.c.c, 0.01F, 0, Optional.empty(), 1, 0, eac.a)));
-      $$0.a(dyz.j, new dzm(List.of(dzm.a($$1.b(dza.b)), dzm.a($$1.b(dza.c))), new eab(jb.g, ead.c.d, 0.004F, 0, Optional.empty(), 1, 0, eac.a)));
+public class pp {
+   public static final ahg<eax> a = pm.a("village/snowy/town_centers");
+   private static final ahg<eax> b = pm.a("village/snowy/terminators");
+
+   public static void a(pf<eax> $$0) {
+      ii<dys> $$1 = $$0.a(ke.aC);
+      ih<dys> $$2 = $$1.b(rc.h);
+      ih<dys> $$3 = $$1.b(rc.c);
+      ih<dys> $$4 = $$1.b(rc.d);
+      ii<edm> $$5 = $$0.a(ke.aE);
+      ih<edm> $$6 = $$5.b(pn.k);
+      ih<edm> $$7 = $$5.b(pn.n);
+      ih<edm> $$8 = $$5.b(pn.c);
+      ii<eax> $$9 = $$0.a(ke.aG);
+      ih<eax> $$10 = $$9.b(pm.a);
+      ih<eax> $$11 = $$9.b(b);
       $$0.a(
-         dyz.k,
-         new dzm(
-            List.of(
-               dzm.a($$1.b(dza.y)),
-               dzm.a($$1.b(dza.z)),
-               dzm.a($$1.b(dza.A)),
-               dzm.a($$1.b(dza.B)),
-               dzm.a($$1.b(dza.C)),
-               dzm.a($$1.b(dza.D)),
-               dzm.a($$1.b(dza.E))
+         a,
+         new eax(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eav.a("village/snowy/town_centers/snowy_meeting_point_1"), 100),
+               Pair.of(eav.a("village/snowy/town_centers/snowy_meeting_point_2"), 50),
+               Pair.of(eav.a("village/snowy/town_centers/snowy_meeting_point_3"), 150),
+               Pair.of(eav.a("village/snowy/zombie/town_centers/snowy_meeting_point_1"), 2),
+               Pair.of(eav.a("village/snowy/zombie/town_centers/snowy_meeting_point_2"), 1),
+               Pair.of(eav.a("village/snowy/zombie/town_centers/snowy_meeting_point_3"), 3)
             ),
-            new eab(40, 15, eac.a, 34222645)
+            eax.a.b
          )
       );
-      $$0.a(dyz.l, new dzm(List.of(dzm.a($$1.b(dza.h)), dzm.a($$1.b(dza.i))), new eab(24, 4, eac.a, 165745295)));
-      $$0.a(dyz.m, new dzm(List.of(dzm.a($$1.b(dza.m)), dzm.a($$1.b(dza.n))), new eab(20, 8, eac.a, 14357621)));
-      $$0.a(dyz.n, new dzm(List.of(dzm.a($$1.b(dza.o), 2), dzm.a($$1.b(dza.s), 3)), new eab(27, 4, eac.a, 30084232)));
-      $$0.a(dyz.o, new dzm($$1.b(dza.p), new eab(2, 1, eac.a, 14357921)));
-      $$0.a(dyz.p, new dzm($$1.b(dza.q), new eab(20, 11, eac.b, 10387313)));
-      $$0.a(dyz.r, new dzm($$1.b(dza.k), new eaa(32, 3, 128, $$2.b(asg.o))));
-      $$0.a(dyz.s, new dzm($$1.b(dza.G), new eab(34, 8, eac.a, 83469867)));
+      pm.a(
+         $$0,
+         "village/snowy/streets",
+         new eax(
+            $$11,
+            ImmutableList.of(
+               Pair.of(eav.a("village/snowy/streets/corner_01", $$6), 2),
+               Pair.of(eav.a("village/snowy/streets/corner_02", $$6), 2),
+               Pair.of(eav.a("village/snowy/streets/corner_03", $$6), 2),
+               Pair.of(eav.a("village/snowy/streets/square_01", $$6), 2),
+               Pair.of(eav.a("village/snowy/streets/straight_01", $$6), 4),
+               Pair.of(eav.a("village/snowy/streets/straight_02", $$6), 4),
+               Pair.of(eav.a("village/snowy/streets/straight_03", $$6), 4),
+               Pair.of(eav.a("village/snowy/streets/straight_04", $$6), 7),
+               Pair.of(eav.a("village/snowy/streets/straight_06", $$6), 4),
+               Pair.of(eav.a("village/snowy/streets/straight_08", $$6), 4),
+               Pair.of(eav.a("village/snowy/streets/crossroad_02", $$6), 1),
+               Pair.of(eav.a("village/snowy/streets/crossroad_03", $$6), 2),
+               new Pair[]{
+                  Pair.of(eav.a("village/snowy/streets/crossroad_04", $$6), 2),
+                  Pair.of(eav.a("village/snowy/streets/crossroad_05", $$6), 2),
+                  Pair.of(eav.a("village/snowy/streets/crossroad_06", $$6), 2),
+                  Pair.of(eav.a("village/snowy/streets/turn_01", $$6), 3)
+               }
+            ),
+            eax.a.a
+         )
+      );
+      pm.a(
+         $$0,
+         "village/snowy/zombie/streets",
+         new eax(
+            $$11,
+            ImmutableList.of(
+               Pair.of(eav.a("village/snowy/zombie/streets/corner_01", $$6), 2),
+               Pair.of(eav.a("village/snowy/zombie/streets/corner_02", $$6), 2),
+               Pair.of(eav.a("village/snowy/zombie/streets/corner_03", $$6), 2),
+               Pair.of(eav.a("village/snowy/zombie/streets/square_01", $$6), 2),
+               Pair.of(eav.a("village/snowy/zombie/streets/straight_01", $$6), 4),
+               Pair.of(eav.a("village/snowy/zombie/streets/straight_02", $$6), 4),
+               Pair.of(eav.a("village/snowy/zombie/streets/straight_03", $$6), 4),
+               Pair.of(eav.a("village/snowy/zombie/streets/straight_04", $$6), 7),
+               Pair.of(eav.a("village/snowy/zombie/streets/straight_06", $$6), 4),
+               Pair.of(eav.a("village/snowy/zombie/streets/straight_08", $$6), 4),
+               Pair.of(eav.a("village/snowy/zombie/streets/crossroad_02", $$6), 1),
+               Pair.of(eav.a("village/snowy/zombie/streets/crossroad_03", $$6), 2),
+               new Pair[]{
+                  Pair.of(eav.a("village/snowy/zombie/streets/crossroad_04", $$6), 2),
+                  Pair.of(eav.a("village/snowy/zombie/streets/crossroad_05", $$6), 2),
+                  Pair.of(eav.a("village/snowy/zombie/streets/crossroad_06", $$6), 2),
+                  Pair.of(eav.a("village/snowy/zombie/streets/turn_01", $$6), 3)
+               }
+            ),
+            eax.a.a
+         )
+      );
+      pm.a(
+         $$0,
+         "village/snowy/houses",
+         new eax(
+            $$11,
+            ImmutableList.of(
+               Pair.of(eav.a("village/snowy/houses/snowy_small_house_1"), 2),
+               Pair.of(eav.a("village/snowy/houses/snowy_small_house_2"), 2),
+               Pair.of(eav.a("village/snowy/houses/snowy_small_house_3"), 2),
+               Pair.of(eav.a("village/snowy/houses/snowy_small_house_4"), 3),
+               Pair.of(eav.a("village/snowy/houses/snowy_small_house_5"), 2),
+               Pair.of(eav.a("village/snowy/houses/snowy_small_house_6"), 2),
+               Pair.of(eav.a("village/snowy/houses/snowy_small_house_7"), 2),
+               Pair.of(eav.a("village/snowy/houses/snowy_small_house_8"), 2),
+               Pair.of(eav.a("village/snowy/houses/snowy_medium_house_1"), 2),
+               Pair.of(eav.a("village/snowy/houses/snowy_medium_house_2"), 2),
+               Pair.of(eav.a("village/snowy/houses/snowy_medium_house_3"), 2),
+               Pair.of(eav.a("village/snowy/houses/snowy_butchers_shop_1"), 2),
+               new Pair[]{
+                  Pair.of(eav.a("village/snowy/houses/snowy_butchers_shop_2"), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_tool_smith_1"), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_fletcher_house_1"), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_shepherds_house_1"), 3),
+                  Pair.of(eav.a("village/snowy/houses/snowy_armorer_house_1"), 1),
+                  Pair.of(eav.a("village/snowy/houses/snowy_armorer_house_2"), 1),
+                  Pair.of(eav.a("village/snowy/houses/snowy_fisher_cottage"), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_tannery_1"), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_cartographer_house_1"), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_library_1"), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_masons_house_1"), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_masons_house_2"), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_weapon_smith_1"), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_temple_1"), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_farm_1", $$7), 3),
+                  Pair.of(eav.a("village/snowy/houses/snowy_farm_2", $$7), 3),
+                  Pair.of(eav.a("village/snowy/houses/snowy_animal_pen_1"), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_animal_pen_2"), 2),
+                  Pair.of(eav.g(), 6)
+               }
+            ),
+            eax.a.b
+         )
+      );
+      pm.a(
+         $$0,
+         "village/snowy/zombie/houses",
+         new eax(
+            $$11,
+            ImmutableList.of(
+               Pair.of(eav.a("village/snowy/zombie/houses/snowy_small_house_1", $$8), 2),
+               Pair.of(eav.a("village/snowy/zombie/houses/snowy_small_house_2", $$8), 2),
+               Pair.of(eav.a("village/snowy/zombie/houses/snowy_small_house_3", $$8), 2),
+               Pair.of(eav.a("village/snowy/zombie/houses/snowy_small_house_4", $$8), 2),
+               Pair.of(eav.a("village/snowy/zombie/houses/snowy_small_house_5", $$8), 2),
+               Pair.of(eav.a("village/snowy/zombie/houses/snowy_small_house_6", $$8), 2),
+               Pair.of(eav.a("village/snowy/zombie/houses/snowy_small_house_7", $$8), 2),
+               Pair.of(eav.a("village/snowy/zombie/houses/snowy_small_house_8", $$8), 2),
+               Pair.of(eav.a("village/snowy/zombie/houses/snowy_medium_house_1", $$8), 2),
+               Pair.of(eav.a("village/snowy/zombie/houses/snowy_medium_house_2", $$8), 2),
+               Pair.of(eav.a("village/snowy/zombie/houses/snowy_medium_house_3", $$8), 1),
+               Pair.of(eav.a("village/snowy/houses/snowy_butchers_shop_1", $$8), 2),
+               new Pair[]{
+                  Pair.of(eav.a("village/snowy/houses/snowy_butchers_shop_2", $$8), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_tool_smith_1", $$8), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_fletcher_house_1", $$8), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_shepherds_house_1", $$8), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_armorer_house_1", $$8), 1),
+                  Pair.of(eav.a("village/snowy/houses/snowy_armorer_house_2", $$8), 1),
+                  Pair.of(eav.a("village/snowy/houses/snowy_fisher_cottage", $$8), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_tannery_1", $$8), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_cartographer_house_1", $$8), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_library_1", $$8), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_masons_house_1", $$8), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_masons_house_2", $$8), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_weapon_smith_1", $$8), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_temple_1", $$8), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_farm_1", $$8), 3),
+                  Pair.of(eav.a("village/snowy/houses/snowy_farm_2", $$8), 3),
+                  Pair.of(eav.a("village/snowy/houses/snowy_animal_pen_1", $$8), 2),
+                  Pair.of(eav.a("village/snowy/houses/snowy_animal_pen_2", $$8), 2),
+                  Pair.of(eav.g(), 6)
+               }
+            ),
+            eax.a.b
+         )
+      );
+      $$0.a(
+         b,
+         new eax(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eav.a("village/plains/terminators/terminator_01", $$6), 1),
+               Pair.of(eav.a("village/plains/terminators/terminator_02", $$6), 1),
+               Pair.of(eav.a("village/plains/terminators/terminator_03", $$6), 1),
+               Pair.of(eav.a("village/plains/terminators/terminator_04", $$6), 1)
+            ),
+            eax.a.a
+         )
+      );
+      pm.a($$0, "village/snowy/trees", new eax($$10, ImmutableList.of(Pair.of(eav.a($$2), 1)), eax.a.b));
+      pm.a(
+         $$0,
+         "village/snowy/decor",
+         new eax(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eav.a("village/snowy/snowy_lamp_post_01"), 4),
+               Pair.of(eav.a("village/snowy/snowy_lamp_post_02"), 4),
+               Pair.of(eav.a("village/snowy/snowy_lamp_post_03"), 1),
+               Pair.of(eav.a($$2), 4),
+               Pair.of(eav.a($$3), 4),
+               Pair.of(eav.a($$4), 1),
+               Pair.of(eav.g(), 9)
+            ),
+            eax.a.b
+         )
+      );
+      pm.a(
+         $$0,
+         "village/snowy/zombie/decor",
+         new eax(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eav.a("village/snowy/snowy_lamp_post_01", $$8), 1),
+               Pair.of(eav.a("village/snowy/snowy_lamp_post_02", $$8), 1),
+               Pair.of(eav.a("village/snowy/snowy_lamp_post_03", $$8), 1),
+               Pair.of(eav.a($$2), 4),
+               Pair.of(eav.a($$3), 4),
+               Pair.of(eav.a($$4), 4),
+               Pair.of(eav.g(), 7)
+            ),
+            eax.a.b
+         )
+      );
+      pm.a(
+         $$0,
+         "village/snowy/villagers",
+         new eax(
+            $$10,
+            ImmutableList.of(
+               Pair.of(eav.a("village/snowy/villagers/nitwit"), 1),
+               Pair.of(eav.a("village/snowy/villagers/baby"), 1),
+               Pair.of(eav.a("village/snowy/villagers/unemployed"), 10)
+            ),
+            eax.a.b
+         )
+      );
+      pm.a(
+         $$0,
+         "village/snowy/zombie/villagers",
+         new eax(
+            $$10,
+            ImmutableList.of(Pair.of(eav.a("village/snowy/zombie/villagers/nitwit"), 1), Pair.of(eav.a("village/snowy/zombie/villagers/unemployed"), 10)),
+            eax.a.b
+         )
+      );
    }
 }
